data all the things

--- a/resources/public/css/randall.css
+++ b/resources/public/css/randall.css
@@ -32,6 +32,14 @@ body {
   }
 }
 
+.small-screen-only {
+  display: block;
+}
+@media (min-width: 768px) {
+  .small-screen-only {
+    display: none;
+  }
+}
 /*
  * Main content
  */
